# android-api

./: .gitignore  LICENSE.md  README.md  build.gradle  gradle.properties  issue_template.md  settings.gradle  update.platform.sh  wait.for.maven.sync.sh
dataviz/: build.gradle  proguard-rules.pro
dataviz/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
licenses/: README.md  licenseReleaseReport.html  licenseReleaseReport.json
sdk/: build.gradle  lint-baseline.xml
sdk/src/main/: AndroidManifest.xml
sdk/src/main/assets/: pin_sheet.json
sdk/src/main/assets/EmbeddedTheme/: MapMode_MapMode_TerrainTexture0.ktx  MapMode_MapMode_TerrainTexture0_LOD.ktx  MapMode_MapMode_TerrainTexture1.ktx  MapMode_MapMode_TerrainTexture1_LOD.ktx  MapMode_MapMode_TerrainTexture2.ktx  MapMode_MapMode_TerrainTexture2_LOD.ktx  MapMode_MapMode_TerrainTexture3.ktx  MapMode_MapMode_TerrainTexture3_LOD.ktx  MapMode_MapMode_TerrainTexture5.ktx  MapMode_MapMode_TerrainTexture5_LOD.ktx  MapMode_MapMode_TerrainTexture7.ktx  MapMode_MapMode_TerrainTexture7_LOD.ktx  MapMode_MapMode_TerrainTexture9.ktx  MapMode_MapMode_TerrainTexture9_LOD.ktx  MapMode_MapMode_Water_02_LOD.ktx  MapMode_MapMode_Water_03.ktx  MapMode_MapMode_planes_01.ktx  MapMode_MapMode_railDiffuse.ktx  MapMode_MapMode_roadDiffuse_repeat.ktx  MapMode_MapMode_trains_01.ktx  MapMode_MapMode_trees_01.ktx  (+3 more)
sdk/src/main/cpp/: CMakeLists.txt  jnimain.cpp  jnimain.h
sdkdoclet/: build.gradle
searchproviders/: build.gradle  proguard-rules.pro
searchproviders/src/main/: AndroidManifest.xml
widgets/: build.gradle
widgets/src/main/: AndroidManifest.xml
(+446 files in other folders)
